[tool.poetry]
name = "jsonsam"
version = "0.1.1"
description = "Tool to facilitate editing, splitting and merging of nested JSON and Python dictionaries"
authors = ["Eric D. Cohen <os@epieye.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/project705/jsonsam"
keywords = ["json", "split", "merge", "edit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities",
    "Topic :: Text Processing"
]

[tool.poetry.scripts]
jsonsam = "jsonsam.jsonsam:main"
randdict = "jsonsam.randdict:main"

[tool.poetry.dependencies]
python = "^3.8"
Faker = "^8.1"
deepdiff = "^5.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/project705/jsonsam/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
